--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <td>R$ 70,00</td>
             <td>Em estoque</td>
         </tr>
-            <td>Calça Jeans</td>
+            <td>Bermuda</td>
             <td>Azul</td>
             <td>G</td>
             <td>R$ 119,00</td>
