--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <td>Em estoque</td>
         </tr>
             <td>Bermuda</td>
-            <td>Azul</td>
+            <td>Vermelha</td>
             <td>G</td>
             <td>R$ 119,00</td>
             <td>Esgotado</td>
